Bug 2050591 - Remove ktlint and replace with ktfmt where possible r=geckoview-reviewers,android-reviewers,owlish,taskgraph-reviewers,ahal,ahochheiden,jonalmeida
Differential Revision: https://phabricator.services.mozilla.com/D314387